# campbell

./: README.rst  pyproject.toml
campbell/: __init__.py  cluster.py  constants.py  correlogram.py  eda.py  simple_scatter.py  test.py
campbell/dev/: app.js  d3_on_juupyter.ipynb  index.html  scatter.py  style.css
campbell/dev/corelogram/: app.js
campbell/templates/: correlogram.html  simple_scatter.html  simple_scatter_req.html  simple_scatter_v3.html  simple_scatter_v4.html
notebooks/: Untitled.ipynb  d3_on_juupyter.ipynb  init_d3.ipynb  stable.ipynb  testD3.ipynb
tests/: test_visupyter.py
