[tool.poetry]
name = "campbell"
version = "0.1.0"
description = "Dataframe visualization on jupyter"
authors = ["horoiwa <horoiwa195@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
panel = "^0.7.0"
bokeh = "^1.4.0"
holoviews = "^1.12.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
jupyterlab = "^1.2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
